--- a/data_processign/visulaization_2.ipynb
+++ b/data_processign/visulaization_2.ipynb
@@ -131,6 +131,57 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   FeelsLikeC  humidity  tempC        date      time\n",
+      "0          18        91     14  2009-01-01  00:00:00\n",
+      "1          17        93     14  2009-01-01  01:00:00\n",
+      "2          16        94     13  2009-01-01  02:00:00\n",
+      "3          15        96     12  2009-01-01  03:00:00\n",
+      "4          18        88     14  2009-01-01  04:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Splitting the date and time into two separate columns\n",
+    "bengaluru1_df.reset_index(inplace=True)\n",
+    "bengaluru1_df['date'] = bengaluru1_df['date_time'].dt.date\n",
+    "bengaluru1_df['time'] = bengaluru1_df['date_time'].dt.time\n",
+    "\n",
+    "# Dropping the original date_time column\n",
+    "bengaluru1_df.drop('date_time', axis=1, inplace=True)\n",
+    "\n",
+    "# Displaying the head of the modified dataframe to verify changes\n",
+    "print(bengaluru1_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The modified dataset has been saved as 'bengaluru_modified.csv'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Saving the modified dataframe to a new CSV file\n",
+    "bengaluru1_df.to_csv('bengaluru_modified.csv', index=False)\n",
+    "\n",
+    "print(\"The modified dataset has been saved as 'bengaluru_modified.csv'.\")"
+   ]
   }
  ],
  "metadata": {
