updating visualization_3.ipynb

--- a/data_processign/Visualization_3.ipynb
+++ b/data_processign/Visualization_3.ipynb
@@ -149,6 +149,50 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               tempC  FeelsLikeC  humidity\n",
+      "tempC       1.000000    0.965076 -0.775924\n",
+      "FeelsLikeC  0.965076    1.000000 -0.722130\n",
+      "humidity   -0.775924   -0.722130  1.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate correlation matrix\n",
+    "bengaluru_data['tempC'] = bengaluru_data['tempC'].astype(float)\n",
+    "bengaluru_data['FeelsLikeC'] = bengaluru_data['FeelsLikeC'].astype(float)\n",
+    "bengaluru_data['humidity'] = bengaluru_data['humidity'].astype(float)\n",
+    "correlation_matrix = bengaluru_data[['tempC', 'FeelsLikeC', 'humidity']].corr()\n",
+    "\n",
+    "print(correlation_matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Weather Data Analysis\n",
+    "\n",
+    "## Correlation Analysis\n",
+    "\n",
+    "### Temperature and Feels Like Temperature\n",
+    "- There's a very high positive correlation (ρ), indicating that as the actual temperature increases, the \"feels like\" temperature tends to increase in a similar manner.\n",
+    "\n",
+    "### Temperature and Humidity\n",
+    "- The correlation is significantly negative (ρ), suggesting that higher temperatures are generally associated with lower humidity levels in this dataset.\n",
+    "\n",
+    "### Feels Like Temperature and Humidity\n",
+    "- This also shows a negative correlation (ρ), indicating that higher \"feels like\" temperatures tend to occur with lower humidity levels.\n"
+   ]
   }
  ],
  "metadata": {
