--- a/Training/training_2.ipynb
+++ b/Training/training_2.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\prit4\\AppData\\Local\\Temp\\ipykernel_18864\\291067091.py:1: DeprecationWarning: \n",
+      "C:\\Users\\prit4\\AppData\\Local\\Temp\\ipykernel_16924\\291067091.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -38,12 +38,564 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset_path = \"dataset.csv\"\n",
     "df = pd.read_csv(dataset_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>time</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>tempC</th>\n",
+       "      <th>fan_speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>74</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>78</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>82</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>85</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>83</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>81</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>79</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>69</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>60</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>50</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>41</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>32</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>23</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>23</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>23</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>22</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>26</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17</td>\n",
+       "      <td>30</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>34</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>40</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>45</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21</td>\n",
+       "      <td>51</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22</td>\n",
+       "      <td>56</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>61</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>70</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>72</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>75</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>74</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>72</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>71</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>64</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>57</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>51</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>46</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>40</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>35</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
+       "      <td>35</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14</td>\n",
+       "      <td>35</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15</td>\n",
+       "      <td>35</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>39</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>17</td>\n",
+       "      <td>43</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18</td>\n",
+       "      <td>47</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19</td>\n",
+       "      <td>51</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>56</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>21</td>\n",
+       "      <td>60</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>22</td>\n",
+       "      <td>64</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23</td>\n",
+       "      <td>69</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>73</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>75</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    month  day  time  humidity  tempC  fan_speed\n",
+       "0       1    1     0        74     18          0\n",
+       "1       1    1     1        78     18          0\n",
+       "2       1    1     2        82     17          0\n",
+       "3       1    1     3        85     17          0\n",
+       "4       1    1     4        83     17          0\n",
+       "5       1    1     5        81     17          0\n",
+       "6       1    1     6        79     17          0\n",
+       "7       1    1     7        69     18          0\n",
+       "8       1    1     8        60     19          0\n",
+       "9       1    1     9        50     20          1\n",
+       "10      1    1    10        41     22          1\n",
+       "11      1    1    11        32     23          2\n",
+       "12      1    1    12        23     24          2\n",
+       "13      1    1    13        23     25          2\n",
+       "14      1    1    14        23     25          2\n",
+       "15      1    1    15        22     26          2\n",
+       "16      1    1    16        26     25          2\n",
+       "17      1    1    17        30     24          2\n",
+       "18      1    1    18        34     23          2\n",
+       "19      1    1    19        40     22          1\n",
+       "20      1    1    20        45     21          1\n",
+       "21      1    1    21        51     19          0\n",
+       "22      1    1    22        56     19          0\n",
+       "23      1    1    23        61     18          0\n",
+       "24      1    2     0        67     17          0\n",
+       "25      1    2     1        70     17          0\n",
+       "26      1    2     2        72     16          0\n",
+       "27      1    2     3        75     16          0\n",
+       "28      1    2     4        74     16          0\n",
+       "29      1    2     5        72     16          0\n",
+       "30      1    2     6        71     16          0\n",
+       "31      1    2     7        64     17          0\n",
+       "32      1    2     8        57     18          0\n",
+       "33      1    2     9        51     19          0\n",
+       "34      1    2    10        46     21          1\n",
+       "35      1    2    11        40     22          2\n",
+       "36      1    2    12        35     24          2\n",
+       "37      1    2    13        35     24          2\n",
+       "38      1    2    14        35     25          2\n",
+       "39      1    2    15        35     25          2\n",
+       "40      1    2    16        39     24          2\n",
+       "41      1    2    17        43     23          2\n",
+       "42      1    2    18        47     23          2\n",
+       "43      1    2    19        51     22          1\n",
+       "44      1    2    20        56     21          1\n",
+       "45      1    2    21        60     20          1\n",
+       "46      1    2    22        64     19          0\n",
+       "47      1    2    23        69     18          0\n",
+       "48      1    3     0        73     18          0\n",
+       "49      1    3     1        75     17          0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(50)"
    ]
   },
   {
